[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-scout-audit"
version = "0.1.0"
description = "Immutable audit logs for code-scout search activity."
readme = "README.md"
requires-python = ">=3.8"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"
testpaths = ["tests"]
